--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mY HTML FILE</title>
 </head>
 <body>
     
 </body>
 </html>
-=======
-Hii This is my html file.....
->>>>>>> b7cfc54ecefa503c10f6f700f75d8da03109c799
-git
